# Syntropy

./: .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  architecture.jsx  nx.json  package.json  syntropy.toml  taskcard-product-spec.md  tsconfig.base.json
.claude/: README.md
.claude/agents/: architecture.md  bazel.md  cognitive-engineering.md  decisions.md  devex.md  f04-ai-engine.md  f11-domains.md  f12-artifact.md  integration.md  (+8 more)
.codex/: README.md  config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.eraser/: README.md
.github/: README.md
.syntropy/: README.md
agents/: _base-traits.md  architecture-agent.md  cognitive-engineering-agent.md  decisions-agent.md  integration-agent.md  meta-agent.md  observations-agent.md  operational-engineering-agent.md  product-agent.md  pulse-companion-agent.md  ux-agent.md  workspace-contracts-agent.md
apps/: README.md
docs/: _changelog.md  _conventions.md  _registry.md
infra/: Pulumi.yaml  README.md  index.ts  package.json  tsconfig.json
observations/: 2026-02-21-architecture-velocity-reflection.md  README.md  _index.md  _template.md
platform/: README.md
products/: README.md
products/command-center/apps/cli/: BUILD.bazel  CLI_REFERENCE.md  Cargo.toml  README.md
products/command-center/apps/cli/src/: main.rs
prototypes/: README.md  architecture-explorer.jsx  artifact-intelligence.jsx  domain-explorer.jsx  product-canvas.jsx  task-card-queue.jsx
surfaces/: README.md  _index.md  dev-platform.md  mobile.md  repo-platform.md  web.md  workspace-platform.md
(+343 files in other folders)
